--- a/style.css
+++ b/style.css
@@ -293,7 +293,7 @@ input[type=checkbox] {
 }
 
 .footer {
-    background-color:  #c5b48c;
+    background-color:  #218ef5;
     height: 230px;
     margin-top: 50px;
     display: flex;
@@ -339,7 +339,7 @@ input[type=checkbox] {
     margin: auto;
    margin: 0; 
    color:rgb(60, 70, 213);
-   background-color:rgb(247, 235, 199);
+   background-color:#ffffff;
    }
 
 
@@ -352,7 +352,7 @@ input[type=checkbox] {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgb(247, 235, 199);
+    background-color: #218ef5;
   }
   .icon-container .button {
     width: 60px;
