--- a/style.css
+++ b/style.css
@@ -22,6 +22,38 @@ body {
 
 }
 
+/* scroll-up button starts */
+
+#btnScrollToTop {
+  position: fixed;
+  right: 10px;
+  bottom: 10px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background: #ff523b;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
+  color: #FFFFFF;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  z-index: 1;
+}
+
+#btnScrollToTop:hover {
+  width: 52px;
+  height: 52px;
+  margin: 2px;
+  background: #b41919;
+}
+
+#btnScrollToTop:active {
+  background: rgb(12, 214, 12);
+}
+
+
+/* scroll-up button ends */
+
 .dark {
     font-family: 'Satoshi', sans-serif;
     font-style: normal;
