--- a/style.css
+++ b/style.css
@@ -368,9 +368,7 @@ input[type=checkbox] {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     align-items: center;
     justify-items: baseline;
-    margin: auto;
-    color:rgb(60, 70, 213);
-    background-color:#64d9ed;
+    background-color:#218ef5;
    }
 
 
